[package]
authors = [ 'EverX Labs <hello@everx.dev>' ]
edition = '2021'
license = 'Apache-2.0'
name = 'ever-struct'
repository = 'https://github.com/tonlabs/ever-struct'
rust-version = '1.65'
version = '1.0.27'

[dependencies]
anyhow = '1.0.70'
failure = '0.1.0'
hex-literal = '0.3.4'
ever_block = { git = 'https://github.com/tonlabs/ever-block.git', tag = '1.10.0' }

